# spectrastream

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  data.json  pyproject.toml  test_to_remove.md
.github/workflows/: ci.yml  coverage-comment.yml
.streamlit/: config.toml
htmlcov/: class_index.html  d_881732a87804b13f_app_py.html  d_a44f0ac069e85531_basic_test_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_streamlit_app_py.html  z_145eef247bfb46b6_util_x_calibrations_py.html  z_92d79c1c12e3ad64_htmlTemplates_py.html  z_ce4f7e2fdbef2931_apply_calibration_py.html  z_ce4f7e2fdbef2931_load_instrument_settings_py.html  z_ce4f7e2fdbef2931_load_or_create_calibration_py.html  z_e5f2f2a1f21f4df3_models_py.html  z_e5f2f2a1f21f4df3_navigation_bar_py.html  z_e5f2f2a1f21f4df3_util_py.html
src/: streamlit_app.py  util_x_calibrations.py
src/app_pages/: calibrate.py  convert.py  home.py  profiles.py
src/data/: calibration_model04.pkl
src/experiments/: PST_WITEcAlpha532nm_20x_PFO_PH_10mW_10x30s_005_Spec.Data 1.spc  S0B_1_OP1_silicon_532.csv  tests01.py
src/front_end/: htmlTemplates.py
src/modules/: models.py  navigation_bar.py  util.py
src/pages/: __load_target_spectra.py  apply_calibration.py  load_instrument_settings.py  load_or_create_calibration.py  load_target_spectra.py
src/spectrastream/: __init__.py  acquisition.py  app.py  cwa.py  ingest.py  merge.py  nexus.py  peaks.py  preprocess.py  profiles.py
src/spectrastream/calibration/: __init__.py  registry.py  spec.py
src/spectrastream/calibration/engines/: __init__.py  base.py  rc2.py
src/spectrastream/calibration/recipes/: rc2_ne_si.yaml  rc2_si_only.yaml  rc2_y_srm.yaml
src/spectrastream/front_end/: htmlTemplates.py
src/ui/: charts.py  localstore.py  profile_store.py  recipe_form.py  state.py
tests/: basic_test.py  conftest.py  test_acquisition.py  test_app_render.py  test_calibration_rc2.py  test_calibration_spec.py  test_cwa.py  test_ingest.py  test_localstore.py  test_merge.py  test_nexus.py  test_preprocess.py  test_profile_flow.py  test_profiles.py  test_units_flow.py
