[project]
name = "spectrastream"
version = "0.1.0"
description = "Web-based spectra harmonization tool"
license = "MIT"
authors = [
  { name = "Evgeniy Marinov", email = "marinov.evgeniy@gmail.com" },
  { name = "Sergey Soroka", email = "sergesoroka@gmail.com" },
  { name = "Luchesar ILIEV", email = "luchesar.iliev@gmail.com" },
  { name = "Nina Jeliazkova", email = "jeliazkova.nina@gmail.com" },
]
maintainers = [
  { name = "Luchesar Iliev", email = "luchesar.iliev@gmail.com" },
  { name = "Vedrin Jeliazkov", email = "vedrin.jeliazkov@gmail.com" },
]
readme = "README.md"
keywords = [
  "spectroscopy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "pandas>=2.2.2,<3.0.0",
  "pydantic-settings>=2.14.2,<3.0.0",
  "ramanchada2>=1.3.1,<2.0.0",
  "streamlit>=1.35.0,<2.0.0",
]

[project.urls]
Homepage = "https://spectra.adma.ai/stream/"
Repository = "https://github.com/h2020charisma/spectrastream"

[dependency-groups]
dev = [
  "pre-commit>=3.7.1,<4.0.0",
  "pytest>=8.2.1,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.15.22,<0.16.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
unsafe-fixes = false

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "I",
  "E501",
  "T100",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["src"]
filterwarnings = [
  "error",  # treat all warnings as errors
  "ignore:.*custom tp_new.*in Python 3.14.*:DeprecationWarning",
]

[tool.coverage.run]
relative_files = true
source = [
  "src",
]

[tool.coverage.paths]
source = [
  "src",
  "*/site-packages",
]
